--- a/www/style.css
+++ b/www/style.css
@@ -235,5 +235,7 @@ body {
 		display: block
 }
 .tooltip-factor {
-  font-family: FabricMDL2Icons
+  font-family: FabricMDL2Icons;
+  src: url('https://appsforoffice.microsoft.com/fabric/fonts/icons/FabricMDL2Icons.woff') format('woff'), url('https://appsforoffice.microsoft.com/fabric/fonts/icons/FabricMDL2Icons.ttf') format('truetype');
+
 }
