--- a/www/style.css
+++ b/www/style.css
@@ -235,7 +235,7 @@ body {
 		display: block
 }
 .tooltip-factor {
-  font-family: FabricMDL2Icons;
+  font-family: 'FabricMDL2Icons';
 }
 @font-face {
             font-family: 'FabricMDL2Icons';
